{
    "name": "InputActionSystem",
    "maps": [
        {
            "name": "GameInputs",
            "id": "9520e326-83ee-468c-9329-b7b37ad5aea2",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "d37f21f1-ebc7-466a-89d8-73866c395028",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseMovement",
                    "type": "Value",
                    "id": "7e09ea01-ff8b-4500-8b67-bff12b47b48c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "738855d3-fa99-468d-8a1b-9cce2bdb2fc3",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "55c876b5-d340-4b74-8cd4-744bd274b50b",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "1176a4be-6aba-4409-bb08-b6de11651fdc",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "6a053f7c-806f-40c7-8025-3f35d15edf99",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "6fd24137-cd3f-439a-8b78-4cdb023d11b1",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "2D Vector",
                    "id": "395b2cb0-bbb5-4c71-ba6e-c8927a1cfb8d",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "af3165f1-c2bf-4635-a4e6-187448bcd289",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "Clamp(max=1000)",
                    "groups": "",
                    "action": "MouseMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "d9b99b52-50c9-4383-9b0c-396ea3a5b19c",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "Clamp(min=-1000)",
                    "groups": "",
                    "action": "MouseMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "4a492bb6-4411-494f-845c-478326518ea5",
                    "path": "<VirtualMouse>/delta/x",
                    "interactions": "",
                    "processors": "Clamp(min=-1000)",
                    "groups": "",
                    "action": "MouseMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "95443224-b289-4976-a322-c4788226cc8c",
                    "path": "<VirtualMouse>/delta/x",
                    "interactions": "",
                    "processors": "Clamp(max=1000)",
                    "groups": "",
                    "action": "MouseMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}